--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,5 @@ steps:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
+
+- task: BrowserStackResults@0
